# sepsis-vitals

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  generate_validation_report.py  pyproject.toml  retrain.py
.github/workflows/: ci.yml  pages.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_bundle_tables.py
compliance/: adjudication_protocol.md  data_protection_agreement.md  irb_protocol_template.md  qms_iec62304_iso14971.md
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: 404.html  admin.html  analytics.html  clinical_validation_protocol.md  dashboard.html  data_contract.md  dataset_construction_plan.md  deployment_guide.md  explorer.html  index.html  manifest.json  manifest.webmanifest  model_card.md  modeling_plan.md  pricing.html  registerSW.js  research_ui_expansion.md  sw.js  validation-report.html
docs/assets/: Admin-BbFAtD7y.js  Admin-Bje9cKpN.js  Admin-BvZA8n_c.js  Admin-C3-yvbO1.js  Admin-C71pWv6n.js  Admin-CrEnd47-.js  Admin-CzkfOpaJ.js  Admin-D6KKzXvH.js  Admin-D83lwEES.js  Admin-DQVFn21s.js  Admin-DlurIIcK.js  Admin-e1Q5fHrb.js  Admin-pSI4KrzU.js  AlertFeed-B03vAOmj.js  AlertFeed-BGGfk0Vi.js  AlertFeed-BJ3l3DmG.js  AlertFeed-BgwuP5gT.js  AlertFeed-C-A38Lrn.js  AlertFeed-CNkWLJeE.js  AlertFeed-CY1vrSd7.js  AlertFeed-DQXENE2Z.js  AlertFeed-DfyR9EXB.js  AlertFeed-Dri1KsKr.js  AlertFeed-JlJy9peF.js  AlertFeed-VfFLfeOX.js  AlertFeed-vbR5bRPP.js  Alerts-B1SSlDmk.js  Alerts-BRvgyqCl.js  Alerts-BwsilSJ3.js  Alerts-CCZkw5yp.js  Alerts-CFFGHVN3.js  Alerts-CLmtUX20.js  Alerts-CNIHkvuu.js  Alerts-Cdh8_r3m.js  Alerts-CvZcHO87.js  Alerts-DlCCMf91.js  Alerts-Q7RZmoag.js  Alerts-sU8bl69-.js  Alerts-u9BAhpOy.js  Analytics-AGGwab71.js  (+328 more)
docs/data/: nhanes.js
docs/superpowers/plans/: 2026-05-18-startup-upgrade.md  (+5 more)
examples/: run_feature_pipeline.py
frontend/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  index.css  main.tsx
health_economics/: model.py
models/: evaluation_report.json  evaluation_report.txt  imputation_medians.json  model_metadata.json  sepsis_model.joblib
models/mimic-demo/: evaluation_report.json  evaluation_report.txt  imputation_medians.json  model_metadata.json  sepsis_model.joblib
scripts/: security-audit.sh
src/sepsis_vitals/: __init__.py  __main__.py  api.py  data_quality.py  db.py  features.py  model_scaffold.py  scores.py  security.py  state.py  train.py
terraform/: main.tf  variables.tf
tests/: test_bundles.py  test_case_library.py  test_data_quality.py  test_data_unifier.py  test_ensemble.py  test_feature_engineering.py  test_features.py  test_fhir_loader.py  test_forecast.py  test_layer1_integration.py  test_mimic_loader_demo.py  test_ml_pipeline.py  test_monitor.py  test_monitor_api.py  test_new_modules.py  test_new_systems.py  test_predictor_dual.py  test_scores.py  test_security.py  test_sepsis3_labeler.py  test_simulator.py  test_simulator_api.py  test_static_site.py  test_trainer_mimic.py  test_websocket_messages.py
tests/fixtures/: fhir_observation.ndjson  fhir_patient.ndjson
(+98 files in other folders)
