[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sepsis-vitals"
version = "0.1.0"
description = "Vitals-only sepsis prediction tooling for low-resource hospital research."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
