[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sepsis-vitals"
version = "0.4.0"
description = "Vitals-only sepsis prediction tooling for low-resource hospitals"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "anthropic>=0.25",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "pyotp>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "websockets>=12.0",
]
ml = [
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "shap>=0.42",
    "joblib>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "bandit[toml]>=1.7",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sepsis_vitals.i18n" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","S","B"]
ignore  = ["S101","S106","S105"]

[tool.bandit]
exclude_dirs = ["tests","examples"]
skips = ["B101"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
